# CppTemplate

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json
.devcontainer/: Dockerfile
apps/app/: CMakeLists.txt  main.cpp
apps/app/src/: main.cpp
imgui_src/: CMakeLists.txt  main.cpp
libs/libA/: CMakeLists.txt
libs/libA/include/libA/: libA.h
libs/libA/src/: libA.cpp
libs/stock_problem/: CMakeLists.txt
libs/stock_problem/include/stock_problem/: stock_problem.h
libs/stock_problem/src/: stock_problem.cpp
profiles/: linux_profile  windows_profile
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/first_test_project/: CMakeLists.txt  test_something.cpp
tests/stock_problem/: CMakeLists.txt  test_stock_problem.cpp
